# advent-of-code

./: .gitignore  aoc_day_1.py  aoc_day_2.py  aoc_day_3.py  pyproject.toml  requirements.frozen
.flox/: env.json
2019/: aoc_day_1.py  aoc_day_10.py  aoc_day_11.py  aoc_day_12.py  aoc_day_3.py  aoc_day_5.py  aoc_day_7.py  aoc_day_7_runner.py  aoc_day_9.py
2019/solutions/: aoc_day_12.py  aoc_day_13.py  aoc_day_14.py  aoc_day_2.py  aoc_day_20.py  aoc_day_22.py  aoc_day_24.py  aoc_day_3.py  aoc_day_4.py  aoc_day_5.py  aoc_day_6.py  aoc_day_7.py  aoc_day_7_feedback_loop.py  aoc_day_7_runner.py  aoc_day_8.py  get_inputs.py  utils.py
2020/: day11.py  day5.py  day6.py  day8.py  day9.py
2020/solutions/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: day1.py  day10.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.go  day4.py  day5.py  day6.py  day7.py
2021/solutions/: day1.go  (+13 more)
2022/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2023/: day1.py  day2.py  day3.py  day4.py  day5.py
2024/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2025/: day1.py
solutions/: aoc_day_1.py  aoc_day_10.py  aoc_day_11.py  aoc_day_12.py  aoc_day_13.py  aoc_day_14.py  aoc_day_2.py  aoc_day_20.py  aoc_day_22.py  aoc_day_24.py  aoc_day_5.py  aoc_day_6.py  aoc_day_7.py  aoc_day_7_feedback_loop.py  aoc_day_7_runner.py  aoc_day_8.py  aoc_day_9.py  get_inputs.py  utils.py
utils/: get_inputs.py  grid.py
(+20 files in other folders)
