[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2021.10.8",
    "charset-normalizer==2.0.8",
    "coloredlogs==15.0.1",
    "humanfriendly==10.0",
    "idna==3.3",
    "networkx==3.4.2",
    "requests==2.26.0",
    "urllib3==1.26.7",
]
